2006-09-19  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsproxy/nsproxylib.c: Removed extra (unneeded) broadcasting the
	pool condition variable. Also, in PushProxy(), the pool
	condition variable is conditionally broadcasted.
	Renamed Proc to Slave to avoid name-clashes with the rest of the
	code where procPtr usually means something else.

	* insproxy/nsproxymod.c: Structure holding the server and module
	information is now allocated from the heap instead of being static.

2006-09-18  Vlad Seryakov  <seryakov@users.sf.net>

	tcl/http.tcl: Updated and fixed minor bugs in http proxy script

2006-09-17  Vlad Seryakov  <seryakov@users.sf.net>

	* doc/src:
	* doc/html: Moved all .html under src and converted them into doctools format.
	Not all files are in valid doctools format yet but it is matter of editing.

2006-09-15  Vlad Seryakov  <seryakov@users.sf.net>

	* log.c:
	* nsd/server.c:
	* nsd/nsconf.c: Make all path related parameters work
	  the same way:
            - if not specified, use default
            - if absolute, use as given
            - if relative, construct under server home dir

          This affects the following parameters:
	    home, pagedir, library, tcllibrary, initfile, serverlog

2006-09-15  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsproxy/nsproxymod.c: Registers Ns_Shutdown instead of Ns_Exit
	callback to teardown the proxy.

	* nsproxy/nsproxy.h: Exports Ns_ProxyShutdown instead of 
	Ns_ProxyExit

	* nsproxy/nsproxylib.c: Added new command [ns_proxy stop] which
	kills slaves of the running proxies. Changed format of the result
	of the [ns_proxy active] to be a list of lists. Each sublist is
	in key/value format containing information about the proxy handle,
	the pid of the slave, the start-time and the executing script.
	Also, the command now accepts one optional argument: the handle of
	the proxy for which to return the status report.
	Changed [ns_proxy clear] to require the pool argument.